libstdc++-v3/include/bits/stl_bvector.h
@@ -1,6 +1,6 @@
 // vector<bool> specialization -*- C++ -*-
 
-// Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009
+// Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010
 // Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
@@ -600,7 +600,7 @@ template<typename _Alloc>
     assign(initializer_list<bool> __l)
     { this->assign(__l.begin(), __l.end()); }
 #endif
-    
+
     iterator
     begin()
     { return this->_M_impl._M_start; }
@@ -823,6 +823,12 @@ template<typename _Alloc>
       else
         insert(end(), __new_size - size(), __x);
     }
+
+#ifdef __GXX_EXPERIMENTAL_CXX0X__
+    void
+    shrink_to_fit()
+    { std::__shrink_to_fit<vector>::_S_do_it(*this); }
+#endif
 
     void
     flip()
